--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -1,9 +1,9 @@
 :root {
   --color-black: #000;
   --color-white: #FFFFFF;
-  --color-svg: #E4E6EB;
+  --color-text: #E4E6EB;
+  --color-svg: #B0B3B8;
   --color-white-ligth-2: #808185;
-  --color-grey: #B0B3B8;
   --color-dark: #18191A;
   --color-dark-light: #242526;
   --color-dark-light-form: #3A3B3C;
@@ -44,6 +44,7 @@ body {
   background-color: var(--color-dark);
   color: var(--color-white-ligth-1);
   overflow-x: hidden;
+  overflow: auto;
   scroll-behavior: smooth;
   min-height: 100dvh;
   min-height: 100vh; }
@@ -64,6 +65,192 @@ body {
     top: 0;
     // height: 6rem;
 }*/
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  height: 5.6rem;
+  background-color: var(--color-dark-light);
+  border-bottom: 1px solid #202020;
+  border-bottom: 1px solid #f4f2f2;
+  top: 0;
+  position: sticky;
+  /*
+	&__fix {
+		list-style: none;
+		font-size: $font-sub-heading;
+		// position: fixed;
+		width: 100%;
+		opacity: 999;
+		overflow: hidden;
+		z-index: 999;
+		// height: 7rem;
+		box-shadow: inset 0px -0.5px 2px 0px var(--color-black);
+		background: var(--color-white);
+	}
+*/
+  /*
+	@media only screen and (max-width: $bp-small ) {
+		padding-right: 5%;
+	}*/ }
+  .header-nav {
+    margin-right: 3.853rem; }
+  .header-left {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    /*
+		&>* {
+			padding: 0 .7rem;
+			cursor: pointer;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			fill: blue;
+		}*/
+    /*&__notification {
+			font-size: $font-low;
+			height: 1.8rem;
+			width: 1.8rem;
+			border-radius: 50%;
+			background: rgba(red, 0.753);
+			color: var(--color-black);
+			position: absolute;
+			top: .7rem;
+			right: 0rem;
+			padding-left: .15rem;
+
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			&:hover {
+				background-color: var(--color-black);
+				color: var(--color-white);
+			}
+
+			@media only screen and (max-width: $bp-small) {
+				top: 1.5rem;
+				right: 0.2rem;
+			}
+		}*/ }
+    .header-left__icon {
+      height: 4rem;
+      width: 4rem;
+      background: var(--color-dark-light-form);
+      border-radius: 50%;
+      padding: .5rem;
+      fill: var(--color-svg); }
+      .header-left__icon-box {
+        position: relative;
+        margin: .5rem; }
+      .header-left__icon:hover {
+        background: var(--color-dark-light-form-2);
+        border-radius: 50%; }
+      .header-left__icon:hover::before {
+        outline: none; }
+    .header-left__photo {
+      height: 3.953rem;
+      border-radius: 50%;
+      margin-right: 1rem;
+      margin: 0rem 1rem 0rem 0.5rem; }
+      .header-left__photo-fb {
+        margin-left: 1.553rem; }
+      .header-left__photo-leftside {
+        height: 2.653rem; }
+    .header-left__search {
+      flex: 0 0 119%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: -.953rem;
+      /*
+
+			&__button {
+				border: none;
+				background-color: #393939;
+				fill: red;
+			}
+
+			&__icon {
+				height: 2rem;
+				width: 2rem;
+				fill: #dc00009d;
+			}
+			*/ }
+      .header-left__search__input {
+        font-family: inherit;
+        font-size: inherit;
+        color: inherit;
+        background-color: var(--color-dark-light-form);
+        border: none;
+        color: inherit;
+        padding: 1.4rem 2rem;
+        border-radius: 100px;
+        width: 93%;
+        transition: all .2s; }
+
+@media only screen and (max-width: 37.5em) {
+  .sub-header {
+    opacity: 0;
+    overflow: hidden;
+    width: .5rem; } }
+
+.sub-header__item {
+  position: relative;
+  width: 11.535rem;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.sub-header__link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
+
+.sub-header__link:hover::before {
+  transition: all .2s;
+  width: 100%; }
+
+.sub-header__link:link, .sub-header__link:visited, .sub-header__link:active {
+  color: blue;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: block;
+  padding: 1.5rem 4.253rem;
+  position: relative;
+  z-index: 10;
+  display: flex;
+  align-items: center; }
+
+.sub-header__icon {
+  width: 2.35rem;
+  height: 2.35rem;
+  margin: 0 .5rem;
+  fill: #B0B3B8; }
+
+.sub-header__link:hover {
+  transition: all .1s;
+  background: var(--color-dark-light-form-2);
+  fill: var(--color-dark-light);
+  border-radius: 1rem;
+  height: 4.753rem; }
+
+.sub-header__link:active::after {
+  color: blue;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: block;
+  padding: 1rem 3.853rem;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  border-bottom: 3px solid yellow; }
+
 .container {
   overflow: scroll;
   overflow-x: hidden;
@@ -136,174 +323,66 @@ body {
 
 
 */
-.header {
+.container {
+  height: 90.435vh; }
+  .container-sub {
+    display: flex;
+    justify-content: space-between; }
+
+.left-side {
+  background-color: transparent;
+  width: 21.535vw;
+  overflow: auto;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  left: 0;
+  position: sticky;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  list-style: none;
-  height: 5.6rem;
-  background-color: var(--color-dark-light);
-  border-bottom: 1px solid #202020;
-  border-bottom: 1px solid #f4f2f2;
-  top: 0;
-  /*
-	&__fix {
-		list-style: none;
-		font-size: $font-sub-heading;
-		// position: fixed;
-		width: 100%;
-		opacity: 999;
-		overflow: hidden;
-		z-index: 999;
-		// height: 7rem;
-		box-shadow: inset 0px -0.5px 2px 0px var(--color-black);
-		background: var(--color-white);
-	}
-*/
-  /*
-	@media only screen and (max-width: $bp-small ) {
-		padding-right: 5%;
-	}*/ }
-  .header-left {
+  height: calc(100vh - 60px); }
+  .left-side-data {
+    margin-top: 1.753rem;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    flex-wrap: nowrap;
+    padding: .5rem; }
+  .left-side-input-2 {
+    background: transparent;
+    color: var(--color-text);
     display: flex;
     align-items: center;
-    cursor: pointer;
-    /*
-		&>* {
-			padding: 0 .7rem;
-			cursor: pointer;
-			height: 100%;
-			display: flex;
-			align-items: center;
-			fill: blue;
-		}*/
-    /*&__notification {
-			font-size: $font-low;
-			height: 1.8rem;
-			width: 1.8rem;
-			border-radius: 50%;
-			background: rgba(red, 0.753);
-			color: var(--color-black);
-			position: absolute;
-			top: .7rem;
-			right: 0rem;
-			padding-left: .15rem;
+    height: 7vh;
+    width: 19.5vw; }
+  .left-side-input-data {
+    font-size: 1.453rem;
+    font-weight: 600; }
+  .left-side-input:hover {
+    transition: all .1s;
+    background: var(--color-dark-light-form-2);
+    fill: var(--color-dark-light);
+    border-radius: .653rem; }
 
-			display: flex;
-			justify-content: center;
-			align-items: center;
+hr {
+  width: 100%;
+  height: 1px;
+  background: red;
+  margin: 1.5rem 0;
+  border: 0; }
 
-			&:hover {
-				background-color: var(--color-black);
-				color: var(--color-white);
-			}
-
-			@media only screen and (max-width: $bp-small) {
-				top: 1.5rem;
-				right: 0.2rem;
-			}
-		}*/ }
-    .header-left__icon {
-      height: 4rem;
-      width: 4rem;
-      background: var(--color-dark-light-form);
-      border-radius: 50%;
-      padding: .5rem;
-      fill: var(--color-svg); }
-      .header-left__icon-box {
-        position: relative;
-        margin: .5rem; }
-      .header-left__icon:hover {
-        background: var(--color-dark-light-form-2);
-        border-radius: 50%; }
-      .header-left__icon:hover::before {
-        outline: none; }
-    .header-left__photo {
-      height: 3.953rem;
-      border-radius: 50%;
-      margin-right: 1rem;
-      margin: 0rem 1rem 0rem 0.5rem; }
-      .header-left__photo-1 {
-        margin-left: 1.553rem; }
-    .header-left__search {
-      flex: 0 0 119%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-left: -.953rem;
-      /*
-
-			&__button {
-				border: none;
-				background-color: #393939;
-				fill: red;
-			}
-
-			&__icon {
-				height: 2rem;
-				width: 2rem;
-				fill: #dc00009d;
-			}
-			*/ }
-      .header-left__search__input {
-        font-family: inherit;
-        font-size: inherit;
-        color: inherit;
-        background-color: var(--color-dark-light-form);
-        border: none;
-        color: inherit;
-        padding: 1.4rem 2rem;
-        border-radius: 100px;
-        width: 93%;
-        transition: all .2s; }
-
-@media only screen and (max-width: 37.5em) {
-  .sub-header {
-    opacity: 0;
-    overflow: hidden;
-    width: .5rem; } }
-
-.sub-header__item {
-  position: relative;
-  width: 11rem;
+.right-side {
+  background-color: blue;
+  width: 17vw;
+  overflow: auto;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  right: 0;
+  position: sticky;
   display: flex;
-  justify-content: center;
-  align-items: center; }
-
-.sub-header__link::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
-
-.sub-header__link:hover::before {
-  transition: all .2s;
-  width: 100%; }
-
-.sub-header__link:link, .sub-header__link:visited {
-  color: blue;
-  text-decoration: none;
-  text-transform: uppercase;
-  display: block;
-  padding: 1.5rem 3.853rem;
-  position: relative;
-  z-index: 10;
-  display: flex;
-  align-items: center; }
-
-.sub-header__icon {
-  width: 1.75rem;
-  height: 1.75rem;
-  margin: 0 .5rem;
-  fill: var(--color-svg); }
-
-.sub-header__icon:hover, .sub-header__link:hover {
-  transition: all .1s;
-  background: var(--color-dark-light-form-2);
-  fill: var(--color-dark-light);
-  border-radius: 1rem; }
+  flex-direction: column;
+  align-items: center;
+  height: calc(100vh - 60px); }
 
 .btn {
   font-size: 1.25rem;
