--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -78,250 +78,99 @@
 
 ///
 /// 
-.header {
-	// font-size: 1.4rem;
-	// border-bottom: var(--line);
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	list-style: none;
-	height: 5.6rem;
-	background-color: var(--color-dark-light);
-	border-bottom: 1px solid #202020;
-	border-bottom: 1px solid #f4f2f2;
-	// box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
-	top: 0;
-	/*
-	&__fix {
-		list-style: none;
-		font-size: $font-sub-heading;
-		// position: fixed;
-		width: 100%;
-		opacity: 999;
-		overflow: hidden;
-		z-index: 999;
-		// height: 7rem;
-		box-shadow: inset 0px -0.5px 2px 0px var(--color-black);
-		background: var(--color-white);
-	}
-*/
-	/*
-	@media only screen and (max-width: $bp-small ) {
-		padding-right: 5%;
-	}*/
 
-	&-left {
-		// align-self: stretch;
+.container {
+	// overflow: scroll;
+	// overflow-x: hidden;
+	height: 90.435vh;
+
+	// scroll-behavior: smooth;
+	&-sub {
 		display: flex;
-		align-items: center;
-		// padding-right: .5rem;
-		cursor: pointer;
-
-
-		/*
-		&>* {
-			padding: 0 .7rem;
-			cursor: pointer;
-			height: 100%;
-			display: flex;
-			align-items: center;
-			fill: blue;
-		}*/
-
-		&>*:hover {
-			// background: var(--color-dark-light-form);
-			// border-radius: 50%;
-		}
-
-
-
-		&__icon {
-			height: 4rem;
-			width: 4rem;
-			background: var(--color-dark-light-form);
-			// border-radius: 5rem;
-			border-radius: 50%;
-			padding: .5rem;
-			fill: var(--color-svg);
-
-			&-box {
-				position: relative;
-				margin: .5rem;
-
-			}
-
-			&:hover {
-				background: var(--color-dark-light-form-2);
-				border-radius: 50%;
-			}
-
-			&:hover::before {
-				outline: none;
-				// transition: all .2s;
-				// transform: translateY(2px);
-				// background: #494a4b;
-				// width: 100%;
-			}
-		}
-
-		/*&__notification {
-			font-size: $font-low;
-			height: 1.8rem;
-			width: 1.8rem;
-			border-radius: 50%;
-			background: rgba(red, 0.753);
-			color: var(--color-black);
-			position: absolute;
-			top: .7rem;
-			right: 0rem;
-			padding-left: .15rem;
-
-			display: flex;
-			justify-content: center;
-			align-items: center;
-
-			&:hover {
-				background-color: var(--color-black);
-				color: var(--color-white);
-			}
-
-			@media only screen and (max-width: $bp-small) {
-				top: 1.5rem;
-				right: 0.2rem;
-			}
-		}*/
-
-		&__photo {
-			height: 3.953rem;
-			border-radius: 50%;
-			margin-right: 1rem;
-			margin: 0rem 1rem 0rem 0.5rem;
-
-			// animation: moveInRight 2s ease-out;
-			// animation-delay: .2s;
-			// cursor: progress;
-			// padding-left: 1.553rem;
-			// cursor: pointer;
-			&-1 {
-				margin-left: 1.553rem;
-			}
-		}
-
-
-		&__search {
-			flex: 0 0 119%;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			margin-left: -.953rem;
-
-			&__input {
-				font-family: inherit;
-				font-size: inherit;
-				color: inherit;
-				background-color: var(--color-dark-light-form);
-				border: none;
-				color: inherit;
-				padding: 1.4rem 2rem;
-				border-radius: 100px;
-				width: 93%;
-				transition: all .2s;
-			}
-
-			/*
-
-			&__button {
-				border: none;
-				background-color: #393939;
-				fill: red;
-			}
-
-			&__icon {
-				height: 2rem;
-				width: 2rem;
-				fill: #dc00009d;
-			}
-			*/
-		}
+		justify-content: space-between;
 
 	}
 }
 
-// sub-heading
+.left-side {
+	background-color: transparent;
+	width: 21.535vw;
+	overflow: auto;
+	// overflow: scroll;
+	overflow-x: hidden;
+	scroll-behavior: smooth;
+	left: 0;
+	position: sticky;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: calc(100vh - 60px);
 
-.sub-header {
-	// margin-top: 6.5rem;
-	// height: 7rem;
+	&-data {
+		margin-top: 1.753rem;
+		display: flex;
+		// width: 19.5vw;
+		flex-direction: column;
+		align-items: left;
+		flex-wrap: nowrap;
+		padding: .5rem;
 
-	@media only screen and (max-width: $bp-small) {
-		opacity: 0;
-		overflow: hidden;
-		width: .5rem;
 	}
 
-	&__item {
-		position: relative;
-		// margin-top: 1rem;
-		width: 11rem;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+	&-input {
 
-		&:not(:last-child) {
-			// margin-bottom: .5rem;
-			// background-color: blue;
+		// padding: 0.2rem .1rem;
+
+		&-2 {
+			background: transparent;
+			// border-radius: 1rem;
+			color: var(--color-text);
+			display: flex;
+			align-items: center;
+			height: 7vh;
+			width: 19.5vw;
+
+
+		}
+
+		&-data {
+			font-size: 1.453rem;
+			font-weight: 600;
+		}
+
+		&:hover {
+			transition: all .1s;
+			background: var(--color-dark-light-form-2);
+			fill: var(--color-dark-light);
+			border-radius: .653rem;
 		}
 	}
+}
 
-	&__link::before {
-		content: "";
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		transition: transform .2s,
-			width .4s cubic-bezier(1, 0, 0, 1) .2s,
-			background-color .1s;
-	}
+// ul {
+// 	// li:nth-child(15) {
+// 		border-bottom: 1px solid yellow;
 
-	&__link:hover::before {
-		// transform: scaleY(1);
-		transition: all .2s;
-		width: 100%;
-		// background: var(--color-dark-light-form-2);
+// 	// }
+// }
+hr {
+	width: 100%;
+	height: 1px;
+	background: red;
+	margin: 1.5rem 0;
+	border: 0;
+}
 
-	}
-
-	&__link:link,
-	&__link:visited {
-		color: blue;
-		text-decoration: none;
-		text-transform: uppercase;
-		display: block;
-		// padding: 1.5rem 0.5rem .5rem 2rem;
-		padding: 1.5rem 3.853rem;
-		position: relative;
-		z-index: 10;
-		display: flex;
-		align-items: center;
-
-	}
-
-	&__icon {
-		width: 1.75rem;
-		height: 1.75rem;
-		margin: 0 .5rem;
-		// margin-right: 2rem;
-		fill: var(--color-svg);
-
-
-	}
-
-	&__icon:hover,
-	&__link:hover {
-		transition: all .1s;
-		background: var(--color-dark-light-form-2);
-		fill: var(--color-dark-light);
-		border-radius: 1rem;
-	}
+.right-side {
+	background-color: blue;
+	width: 17vw;
+	overflow: auto;
+	overflow-x: hidden;
+	scroll-behavior: smooth;
+	right: 0;
+	position: sticky;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: calc(100vh - 60px);
 }
