--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -148,8 +148,10 @@
             &-fb {
                 margin-left: 1.553rem;
             }
-            &-leftside{
-            height: 2.653rem;
+
+            &-leftside {
+                height: 2.653rem;
+                width: 2.653rem;
 
             }
         }
