--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,7 +1,7 @@
 :root {
     --color-black: #000;
 
-    --color-white: #FFFFFF;
+    --color-white: #fff;
     --color-text: #E4E6EB;
 
     // --color-white-1: #f0f2f5;
@@ -15,6 +15,7 @@
     --color-dark-light-form-2: #494a4b;
 
     --color-heading: #0866FF;
+    // #316FF6
     // --color-contact: #240090;
 
     // --color-grey-light-1: #faf9f9;
@@ -104,4 +105,5 @@ body {
     scroll-behavior: smooth;
     min-height: 100dvh;
     min-height: 100vh;
+    p
 }
