--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,42 +1,3 @@
-.container {
-	overflow: scroll;
-	overflow-x: hidden;
-	// width: 100vw;
-	// height: 90vh;
-	scroll-behavior: smooth;
-
-
-}
-
-.container::-webkit-scrollbar {
-	// display: none;
-	// background-color: var(--color-dark-light-form-2);
-	// padding: -17px;
-	width: .9rem;
-
-
-	&-track {
-		background: transparent;
-		// border-radius: 1rem;
-		// width: 1.5rem;
-
-		&:hover {
-			background: var(--color-dark-light);
-
-		}
-	}
-
-	&-thumb {
-		background: var(--color-dark-light-form-2);
-		// border-radius: 1rem;
-
-		// &:hover {
-		// background: green;
-		// }
-	}
-
-}
-
 /*
 .sub-header__icon {
 	fill: red;
@@ -109,9 +70,10 @@
 /// 
 
 .container {
-	// overflow: scroll;
-	// overflow-x: hidden;
 	height: 90.435vh;
+	overflow: scroll;
+	overflow-x: hidden;
+	scroll-behavior: smooth;
 
 	// scroll-behavior: smooth;
 	&-sub {
@@ -119,6 +81,35 @@
 		justify-content: space-between;
 
 	}
+}
+
+.container::-webkit-scrollbar {
+	// display: none;
+	// background-color: var(--color-dark-light-form-2);
+	// padding: -17px;
+	width: .9rem;
+
+
+	&-track {
+		background: transparent;
+		// border-radius: 1rem;
+		// width: 1.5rem;
+
+		&:hover {
+			background: var(--color-dark-light);
+
+		}
+	}
+
+	&-thumb {
+		background: var(--color-dark-light-form-2);
+		// border-radius: 1rem;
+
+		// &:hover {
+		// background: green;
+		// }
+	}
+
 }
 
 .left-side {
@@ -291,5 +282,75 @@ hr {
 	// background: var(--color-dark-light-form-2);
 	margin: 1.5rem 0;
 	border: 1px solid var(--color-dark-light-form-2);
+
+}
+
+.mid {
+	// padding: 0 1rem;
+	overflow: hidden;
+	position: relative;
+	// margin: 0rem 7rem;
+	max-width: 44vw;
+	padding: 1rem 0;
+
+	&-1 {
+		// max-width: 52vw;
+		display: flex;
+		flex-direction: row;
+		gap: 1rem;
+		padding: 1rem 0;
+
+	}
+
+	div :nth-child(1) {
+		background-image: linear-gradient(#1f2581, #5E7FA7);
+	}
+
+	div :nth-child(2) {
+		background-image: linear-gradient(#000153, #5b2d8a);
+	}
+
+	div :nth-child(3) {
+		background-image: linear-gradient(#fff, #4E3631);
+	}
+
+	&-2 {
+// padding: 0 1rem;
+		overflow: hidden;
+		border-radius: 1rem;
+		width: 15rem;
+		height: 25rem;
+
+		// img {
+		// width: 30vw;
+		// }
+		.imag {
+			border-radius: 1rem;
+			// cursor: pointer;
+			background: var(--color-white);
+			// animation: ImageAnim 2s;
+			// transition: all 2s;
+			// flex-shrink: 0;
+			height: 25rem;
+			// height: 22.4rem;
+			width: 15rem;
+			// width: 12rem;
+			margin: auto;
+			transform: scale(.7);
+
+
+			&:hover {
+				transform: scale(0.715);
+				transition: all .2s;
+				box-shadow: 0px 0px 150px -15px #0000005d;
+			}
+
+			&:nth-child(2) {
+				height: 10rem;
+				width: 10rem;
+			}
+		}
+	}
+
 
 }
