--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -24,14 +24,14 @@
     list-style: none;
     height: 5.6rem;
     background-color: var(--color-dark-light);
-    border-bottom: 1px solid #202020;
-    border-bottom: 1px solid #f4f2f2;
+    // border-bottom: 1px solid #202020;
+    border-bottom: 1px solid var(--color-dark-light-form-2);
     // box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
     top: 0;
     position: sticky;
 
     &-nav {
-        margin-right: 3.853rem;
+        margin-right: 2.753rem;
     }
 
     /*
@@ -211,14 +211,15 @@
     &__item {
         position: relative;
         // margin-top: 1rem;
-        width: 11.535rem;
+        width: 11.935rem;
         display: flex;
         justify-content: center;
         align-items: center;
 
-        &:not(:last-child) {
+        &:first-child {
             // margin-bottom: .5rem;
             // background-color: blue;
+            border-bottom: 3px solid var(--color-heading);
         }
     }
 
@@ -244,7 +245,7 @@
     &__link:link,
     &__link:visited,
     &__link:active {
-        color: blue;
+        // color: blue;
         text-decoration: none;
         text-transform: uppercase;
         display: block;
@@ -264,20 +265,30 @@
         // margin-right: 2rem;
         fill: #B0B3B8;
 
+        &-1 {
+            fill: var(--color-heading);
+        }
 
     }
 
     // &__icon:hover,
-    &__link:hover {
+    &__item:hover {
         transition: all .1s;
         background: var(--color-dark-light-form-2);
-        fill: var(--color-dark-light);
+        // fill: var(--color-dark-light);
         border-radius: 1rem;
         height: 4.753rem;
+
+        &:first-child {
+            background: transparent;
+            border-radius: 0;
+            height: auto;
+
+        }
     }
 
     &__link:active::after {
-        color: blue;
+        // color: blue;
         text-decoration: none;
         text-transform: uppercase;
         display: block;
